# sqeezz_di

./: MANIFEST.in  README.md  config.py  main.py  pyproject.toml  setup.py  test_async_sqeezz.py
.github/workflows/: publish.yml
sqeezz/: __init__.py
